v0.5.4 Removed asm bytecode manipulation library